samples/_failures_safe/1761310558_3906b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fefc172b.c: In function ‘main’:
./samples/SAFE/__tmp_fefc172b.c:175:12: error: missing terminating " character
  175 |     printf("\nMatrix
      |            ^~~~~~~~~
./samples/SAFE/__tmp_fefc172b.c:175:5: error: expected expression at end of input
  175 |     printf("\nMatrix
      |     ^~~~~~
./samples/SAFE/__tmp_fefc172b.c:175:5: error: expected declaration or statement at end of input
